# potion_problem

./: .gitignore  .mcp.json  2025-07-14-21-30-00-lean4-formal-verification-comprehensive-assessment.md  2025-07-14-21-45-00-final-honest-assessment-lean4-formalization.md  2025-07-14-23-59-00-rigorous-lean4-integration-technical-report.md  2025-07-15-00-00-00-comprehensive-lean4-formal-verification-final-report.md  2025-07-15-00-30-00-genuine-lean4-technical-assessment-report.md  2025-07-15-01-30-00-comprehensive-lean4-implementation-report.md  2025-07-15-01-30-00-meaningful-lean4-integration-final-report.md  2025-07-15-02-30-00-final-honest-lean4-technical-assessment.md  2025-07-15-02-30-00-genuine-lean4-formal-verification-report.md  2025-07-15-02-30-00-lean4-mathematical-verification-report.md  2025-07-15-03-00-00-genuine-lean4-formalization-assessment.md  2025-07-15-04-00-00-genuine-lean4-formalization-honest-assessment.md  2025-07-15-04-00-00-meaningful-lean4-integration-technical-report.md  2025-07-15-04-30-00-meaningful-lean4-integration-technical-reality-report.md  2025-07-15-04-50-00-lean4-verification-summary-and-deliverables.md  2025-07-15-05-00-00-genuine-lean4-formal-verification-final-report.md  2025-07-15-06-00-00-technical-assessment-report-lean4-aphrodisiac-problem.md  2025-07-27-claudemd.txt  2025-07-27-research-how-to-solve-the-remaining-3-sorry-warnin.txt  2025-07-27-this-session-is-being-continued-from-a-previous-co.txt  2025-07-28-homeubuntuworkbenchprojectspot.txt  2025-07-28-terminal-setup.txt  2025-07-28-this-session-is-being-continued-from-a-previous-co.txt  2025-07-28-you-are-a-world-class-lean-4-proof-strategy-expert.txt  2025-08-01-caveat-the-messages-below-were-generated-by-the-u.txt  ACHIEVEMENT.md  AGENTS.md  AbelLimitGeneratingSolution.md  AbsorbingFundamentalMatrixSolution.md  AbsorbingIntervalDirichletSolution.md  AbstractInterpretationWideningSolution.md  ActivityDerivativePartitionSolution.md  ActuarialSurplusCapacitySolution.md  AdjacencyKernelPathSumSolution.md  AdjointBoundaryPairingSolution.md  AdjointTestFunctionSolution.md  AdjunctionTailSumSolution.md  AffineChangeOfVariablesSolution.md  (+1325 more)
.claude/: iteration_state.json  settings.json  sorry_attempts.json
.serena/: project.yml
AphrodisiacProblem/: Basic.lean  SimpleProof.lean
PotionProblem/: AudienceLadder.lean  Basic.lean  ComprehensiveTests.lean  FactorialSeries.lean  FormalExtensions.lean  IrwinHallTheory.lean  JanossyConfiguration.lean  KilledPotential.lean  Main.lean  MainOriginal.lean  MainWithGeometry.lean  PMF.lean  ProbabilityFoundations.lean  SeriesAnalysis.lean  SeriesReindexing.lean  SolutionZoo.lean  test_polynomial_fwdDiff.lean
UniformHittingTime/: BasicMinimal.lean  DemonstrationMinimal.lean  FactorialSeries.lean  HittingTime.lean  HittingTimeComplete.lean  IrwinHall.lean  MinimalWorking.lean  SeriesReindexing.lean  TelescopingMinimal.lean  TelescopingMinimalWorking.lean  TelescopingSeries.lean  TelescopingSeriesFixed.lean  UniformSumHittingTime.lean  WorkingResults.lean  proof_completion_guide.md
api_database/: README.md  mathlib_apis.db  migrate_apis.py  migrate_non_existent.py  polynomial_apis.md
archive/: ARCHIVED_FILES_README.md  api_test.lean  build_output.txt  build_output_after_migration.txt  current_sorries.txt  remaining_warnings.txt  test_basic.lean
backup_removed_config/: lake-manifest.json  lakefile.toml
candidate-queues/: recovery-20260514-proposals.md  recovery-20260514-triage.json
docs/: 2025-07-13-14-30-00-mathematical-proof-implementation-report.md  FINAL_LEAN4_ACHIEVEMENT_REPORT.md  (+78 more)
(+4366 files in other folders)
