[project]
name = "potion-problem"
version = "0.1.0"
description = "The Aphrodisiac Problem (媚薬問題) - Formal proof project for E[τ] = e"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*", "AUTHORS*", "NOTICE*"]
requires-python = ">=3.12.11"
authors = [
    {name = "Potion Problem Contributors"},
]
keywords = ["lean4", "formal-verification", "mathematics", "probability", "hitting-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "lean-explore>=0.3.0",  # Lean 4 mathlib API search tool
]

[project.optional-dependencies]
numerical = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "sympy>=1.12",
    "z3-solver>=4.13.0.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/potion_problem"
Repository = "https://github.com/yourusername/potion_problem"
Documentation = "https://github.com/yourusername/potion_problem/tree/main/docs"
"Bug Tracker" = "https://github.com/yourusername/potion_problem/issues"
Changelog = "https://github.com/yourusername/potion_problem/blob/main/CHANGELOG.md"

[project.scripts]
potion-test = "test_all:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv]
# Project management
managed = true
package = true

# Dependency resolution strategy
compile-bytecode = true
prerelease = "disallow"
resolution = "highest"
index-strategy = "first-index"

# Performance optimization
concurrent-downloads = 5
link-mode = "copy"